stm32: update support of board nucleo f401re

--- a/arch/stm32/Makefile
+++ b/arch/stm32/Makefile
@@ -1,5 +1,6 @@
 
-objs-$(CONFIG_BOARD_STM32_NUCLEOF401RE) += boards/nucleo-f401re.o
+objs-$(CONFIG_BOARD_STM32_NUCLEOF401RE) += boards/nucleo_f401re.o
+objs-$(CONFIG_BOARD_STM32_NUCLEOF103RB) += boards/nucleo_f103rb.o
 
 meta = ldscript
 
