--- a/arch/stm32/drivers/usart/usart.config
+++ b/arch/stm32/drivers/usart/usart.config
@@ -14,6 +14,7 @@
   depend CONFIG_MUTEK_PRINTK
   provide CONFIG_MUTEK_PRINTK_HANDLER
   require CONFIG_DRIVER_STM32_USART_PRINTK_BAUDRATE
+  require CONFIG_DRIVER_STM32_USART_PRINTK_CLK_FREQ
   flags auto
 %config end
 
@@ -22,6 +23,12 @@
   parent CONFIG_DRIVER_STM32_USART_PRINTK
   flags value
   default 115200
+%config end
+
+%config CONFIG_DRIVER_STM32_USART_PRINTK_CLK_FREQ
+  desc Temporary frequency of clk in front of usart (printk)
+  parent CONFIG_DRIVER_STM32_USART_PRINTK
+  flags value
 %config end
 
 %config CONFIG_DRIVER_STM32_USART_SWFIFO
