--- a/arch/stm32/stm32.config
+++ b/arch/stm32/stm32.config
@@ -62,5 +62,6 @@
   desc STM32 Nucleo STM32F401RE board
   parent CONFIG_ARCH_STM32
   depend CONFIG_DRIVER_STM32_USART_PRINTK
+  provide CONFIG_DRIVER_STM32_USART_PRINTK_CLK_FREQ=42000000
 %config end
 
