--- a/arch/stm32/drivers/gpio/Makefile
+++ b/arch/stm32/drivers/gpio/Makefile
@@ -1,4 +1,4 @@
 
-objs-$(CONFIG_DRIVER_STM32_GPIO_F1XX) += gpio-f1xx.o
-objs-$(CONFIG_DRIVER_STM32_GPIO_F4XX) += gpio-f4xx.o
+objs-$(CONFIG_DRIVER_STM32_GPIO_F1XX) += f1xx_gpio.o
+objs-$(CONFIG_DRIVER_STM32_GPIO_F4XX) += f4xx_gpio.o
 
