--- a/arch/stm32/drivers/Makefile
+++ b/arch/stm32/drivers/Makefile
@@ -4,3 +4,4 @@ subdirs-$(CONFIG_DRIVER_STM32_GPIO) += gpio
 subdirs-$(CONFIG_DRIVER_STM32_RCC) += rcc
 subdirs-$(CONFIG_DRIVER_STM32_PWM) += pwm
 subdirs-$(CONFIG_DRIVER_STM32_TIMER) += timer
+subdirs-$(CONFIG_DRIVER_STM32_SPI) += spi
