stm32: add support for nucleo f103rb

--- a/arch/stm32/stm32.config
+++ b/arch/stm32/stm32.config
@@ -65,3 +65,10 @@
   provide CONFIG_DRIVER_STM32_USART_PRINTK_CLK_FREQ=42000000
 %config end
 
+%config CONFIG_BOARD_STM32_NUCLEOF103RB
+  desc STM32 Nucleo STM32F103RB board
+  parent CONFIG_ARCH_STM32
+  depend CONFIG_DRIVER_STM32_USART_PRINTK
+  provide CONFIG_DRIVER_STM32_USART_PRINTK_CLK_FREQ=36000000
+%config end
+
