libnetwork: Update library

--- a/libnetwork/network.config
+++ b/libnetwork/network.config
@@ -6,3 +6,10 @@
   depend CONFIG_MUTEK_SEMAPHORE
   flags auto
 %config end
+
+%config CONFIG_NET_LAYER_TYPE_ENUM
+  desc Layer type ID allocator
+  parent CONFIG_NET
+  flags enum
+  default 0
+%config end
