added more instructions to bytecode, added bytecode asssembler tool, added bytecode translation to machine code

--- a/examples/bytecode/config
+++ b/examples/bytecode/config
@@ -15,7 +15,10 @@
 
   CONFIG_MUTEK_BYTECODE_CHECKING
   CONFIG_MUTEK_BYTECODE_DEBUG
-#  CONFIG_MUTEK_BYTECODE_TRACE
+  #CONFIG_MUTEK_BYTECODE_TRACE
+  CONFIG_MUTEK_BYTECODE_NATIVE
+  CONFIG_MUTEK_BYTECODE_VM
 
   %include arch/arch.build
+  %include scripts/options.build
 
