--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -497,25 +497,36 @@
 # Bytecode
 
 %config CONFIG_MUTEK_BYTECODE
-  desc Enable the mutekh customizable bytecode interpreter.
+  desc Enable the mutekh customizable bytecode.
   flags auto
   parent CONFIG_MUTEK
+%config end
+
+%config CONFIG_MUTEK_BYTECODE_VM
+  desc Enable the mutekh bytecode interpreter.
+  parent CONFIG_MUTEK_BYTECODE
+  when CONFIG_MUTEK_BYTECODE_NATIVE!
+%config end
+
+%config CONFIG_MUTEK_BYTECODE_NATIVE
+  desc Enable translation of bytecode in machine code at compile time.
+  parent CONFIG_MUTEK_BYTECODE
 %config end
 
 %config CONFIG_MUTEK_BYTECODE_CHECKING
   desc Enable bytecode checks at execution.
   desc When this option is disabled, the bytecode may crash the system.
-  parent CONFIG_MUTEK_BYTECODE
+  parent CONFIG_MUTEK_BYTECODE_VM
 %config end
 
 %config CONFIG_MUTEK_BYTECODE_DEBUG
   desc Enable verbose bytecode error reporting.
-  parent CONFIG_MUTEK_BYTECODE
+  parent CONFIG_MUTEK_BYTECODE_VM
 %config end
 
 %config CONFIG_MUTEK_BYTECODE_TRACE
   desc Enable verbose bytecode execution.
-  parent CONFIG_MUTEK_BYTECODE
+  parent CONFIG_MUTEK_BYTECODE_VM
   depend CONFIG_MUTEK_BYTECODE_DEBUG
 %config end
 
