added CONFIG_COMPILE_NOBITFIELD, useful to prevent false positive from soclib memory checker

--- a/scripts/global.config
+++ b/scripts/global.config
@@ -89,3 +89,8 @@
   desc Heterogeneous build: The currently build kernel is part of an heterogeneous platform
 %config end
 
+%config CONFIG_COMPILE_NOBITFIELD
+  flags root auto
+  desc Makes the BITFIELD() macro ignore the field bit size
+%config end
+
