--- a/arch/soclib/soclib.config
+++ b/arch/soclib/soclib.config
@@ -97,6 +97,7 @@
   desc Enable instrumentation with the SocLib memory checker ISS wrapper
   parent CONFIG_ARCH_SOCLIB
   depend CONFIG_MUTEK_MEMALLOC_SMART
+  suggest CONFIG_COMPILE_NOBITFIELD
 %config end
 
 %init INIT_SOCLIB_MEMCHECK
