hexo: Add MutekH-as-bootloader support

--- a/hexo/hexo.config
+++ b/hexo/hexo.config
@@ -13,6 +13,17 @@
   parent CONFIG_HEXO
 %config end
 
+%config CONFIG_HEXO_BOOTLOADER
+  desc Compile Hexo as bootloader with CPU-specific interface
+  parent CONFIG_HEXO
+%config end
+
+%config CONFIG_HEXO_BOOTLOADER_DESC_ADDRESS
+  desc Set Hexo bootloader target descriptor address
+  parent CONFIG_HEXO_BOOTLOADER
+  flags value
+%config end
+
 %config CONFIG_HEXO_INTERRUPT_STACK
   desc Use a special stack for interrupts
   flags auto
