--- a/mutek/load.config
+++ b/mutek/load.config
@@ -200,6 +200,10 @@
   parent CONFIG_LOAD
 %config end
 
+%config CONFIG_LOAD_HEXO_BOOTLOADER
+  desc Use Hexo as bootloader with CPU-specific interface
+  parent CONFIG_LOAD
+%config end
 
 
 %config CONFIG_STARTUP_STACK_ADDR
