adxl362: updated spi bytecode

--- a/drivers/valio/valio.config
+++ b/drivers/valio/valio.config
@@ -20,10 +20,11 @@
 %config CONFIG_DRIVER_ADXL362
   parent CONFIG_DRIVER
   desc Enable ADXL362 motion detector driver
-  depend CONFIG_DEVICE_VALIO
+  depend CONFIG_DEVICE_VALIO_MOTION
   depend CONFIG_DEVICE_SPI
   depend CONFIG_DEVICE_SPI_REQUEST
   depend CONFIG_DEVICE_SPI_REQUEST_TIMER
+  depend CONFIG_DEVICE_SPI_REQUEST_GPIO
 %config end
 
 %config CONFIG_DRIVER_PUSH_BUTTON
