arch/nrf5x: Add rfpacket driver

--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -242,12 +242,14 @@
   default 4
 %config end
 
-%config CONFIG_DRIVER_NRF5X_BLE_RADIO_DCDC
-  desc Enable nRF5X Radio DCDC
-  parent CONFIG_DRIVER_NRF5X_BLE_RADIO
-%config end
-
 %config CONFIG_DRIVER_NRF5X_BLE_RADIO_DEBUG
   desc Enable nRF5x Radio Debug code
   parent CONFIG_DRIVER_NRF5X_BLE_RADIO
+%config end
+
+%config CONFIG_DRIVER_NRF5X_RADIO
+  desc Enable nRF5x RFPacket driver
+  parent CONFIG_ARCH_NRF5X
+  depend CONFIG_DEVICE_RFPACKET
+  depend CONFIG_DEVICE_IRQ
 %config end
