--- a/arch/nrf5x/nrf5x.config
+++ b/arch/nrf5x/nrf5x.config
@@ -18,6 +18,11 @@
   depend CONFIG_CPU_ARM32M_CORTEXM4
 %config end
 
+%config CONFIG_NRF5X_RADIO_DCDC
+  desc Enable nRF5X Radio DCDC
+  parent CONFIG_ARCH_NRF5X
+%config end
+
 %config CONFIG_NRF5X_RAMSIZE
   desc nRF5x RAM size
   parent CONFIG_ARCH_NRF5X
