mutek: fix kroutine link error when the scheduler is disabled

--- a/mutek/Makefile
+++ b/mutek/Makefile
@@ -1,7 +1,7 @@
 
 DIR_CFLAGS = -D_HEXO_INTTYPES_DEPRECATED
 
-objs += fault.o startup.o mem_alloc.o
+objs += fault.o startup.o mem_alloc.o kroutine.o
 
 objs-$(CONFIG_MUTEK_CONSOLE) += console.o
 objs-$(CONFIG_MUTEK_SHELL) += shell.o shell_mem.o
