cpu/arm32m: Cortex-M4 supports IRQ waiting

--- a/cpu/arm32m/arm32m.config
+++ b/cpu/arm32m/arm32m.config
@@ -55,6 +55,7 @@
   provide CONFIG_COMPILE_MCPU=cortex-m4
   provide CONFIG_CPU_NAME=arm_cortex_m4
   provide CONFIG_CPU_EXCEPTION_RELOCATABLE
+  provide CONFIG_CPU_WAIT_IRQ
   provide CONFIG_CPU_ARM32M_ARCH_VERSION=7
   provide CONFIG_CPU_NONALIGNED_ACCESS
   provide CONFIG_CPU_HARDWARE_MUL=64
