arch/nrf5x: Add GPIO+Timer-based PWM driver

--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -87,3 +87,30 @@
   depend CONFIG_DEVICE_ICU
   depend CONFIG_DEVICE_IRQ
 %config end
+
+# Timer+GPIOTE-based PWM
+
+%config CONFIG_DRIVER_NRF5X_GPIO_PWM
+  desc Enable nRF5x GPIOTE-based PWM driver
+  parent CONFIG_ARCH_NRF5X
+  depend CONFIG_DEVICE_PWM
+  depend CONFIG_DEVICE_IRQ
+  depend CONFIG_DEVICE_IOMUX
+  depend CONFIG_DEVICE_DELAYED_REQUEST
+%config end
+
+%config CONFIG_DRIVER_NRF5X_GPIO_PWM_CHANNEL_COUNT
+  desc Count of nRF5x GPIO PWM driver
+  parent CONFIG_DRIVER_NRF5X_GPIO_PWM
+  flags value
+  default 1
+  range [1,3]
+%config end
+
+%config CONFIG_DRIVER_NRF5X_GPIO_PWM_PPI_COUNT
+  desc Count of nRF5x GPIO PPI channels
+  parent CONFIG_DRIVER_NRF5X_GPIO_PWM
+  flags value
+  provide CONFIG_DRIVER_NRF5X_PPI_ENUM
+  default CONFIG_DRIVER_NRF5X_GPIO_PWM_CHANNEL_COUNT*2
+%config end
