libdevice: Add network driver class definition

--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -231,6 +231,12 @@
   desc Enable DMA double buffering support
 %config end
 
+%config CONFIG_DEVICE_NET
+  parent CONFIG_DEVICE
+  flags auto
+  desc Enable network adapter devices support
+%config end
+
 %config CONFIG_DEVICE_TIMER
   parent CONFIG_DEVICE
   flags auto
