--- a/arch/nrf5x/board/Makefile
+++ b/arch/nrf5x/board/Makefile
@@ -3,4 +3,5 @@ objs-$(CONFIG_NRF5X_PCA10005) += pca10005.o
 objs-$(CONFIG_NRF5X_PCA10024) += pca10024.o
 objs-$(CONFIG_NRF5X_PCA20002) += pca20002.o
 objs-$(CONFIG_NRF5X_PCA20006) += pca20006.o
+objs-$(CONFIG_NRF5X_PCA10028) += pca10028.o
 objs-$(CONFIG_NRF5X_PCA10036) += pca10036.o
