arch/nrf5x: Add support for PCA10031 (nRF51-Dongle)

--- a/arch/nrf5x/board/Makefile
+++ b/arch/nrf5x/board/Makefile
@@ -4,4 +4,5 @@ objs-$(CONFIG_NRF5X_PCA10024) += pca10024.o
 objs-$(CONFIG_NRF5X_PCA20002) += pca20002.o
 objs-$(CONFIG_NRF5X_PCA20006) += pca20006.o
 objs-$(CONFIG_NRF5X_PCA10028) += pca10028.o
+objs-$(CONFIG_NRF5X_PCA10031) += pca10031.o
 objs-$(CONFIG_NRF5X_PCA10036) += pca10036.o
