--- a/arch/nrf5x/board/board.config
+++ b/arch/nrf5x/board/board.config
@@ -28,6 +28,11 @@
   parent CONFIG_ARCH_NRF51
 %config end
 
+%config CONFIG_NRF5X_PCA10031
+  desc Support for nRF51-DK USB dongle
+  parent CONFIG_ARCH_NRF51
+%config end
+
 %config CONFIG_NRF5X_PCA10036
   desc Support for nRF52832 Preview Development Kit
   parent CONFIG_ARCH_NRF52
