mips: support wait instruction with interrupts enabled

--- a/cpu/mips/mips.config
+++ b/cpu/mips/mips.config
@@ -108,6 +108,12 @@
   when CONFIG_CPU_MIPS_VERSION>2
 %config end
 
+%config CONFIG_CPU_MIPS_WAIT_NEEDS_IE
+  parent CONFIG_CPU_MIPS
+  desc The wait instruction must be executed with interrupts enabled
+  flags meta
+%config end
+
 %config CONFIG_CPU_MIPS_TIMER_CYCLECOUNTER
   desc Enable timer driver for mips cycle counter
   parent CONFIG_CPU_MIPS
