drivers/printk: Add a printk driver that use console as output
As console must be used throught requests, have a ringbuffer
to store messages while they are flushed in the background.
Overflows are not blocking.

--- a/drivers/printk/Makefile
+++ b/drivers/printk/Makefile
@@ -1,2 +1,3 @@
 objs-$(CONFIG_DRIVER_SEGGER_RTT) += segger-rtt.o
 objs-$(CONFIG_DRIVER_SEGGER_RTT_PRINTK) += segger-rtt-printk.o
+objs-$(CONFIG_DRIVER_CONSOLE_PRINTK) += console.o
