--- a/drivers/printk/printk.config
+++ b/drivers/printk/printk.config
@@ -23,3 +23,26 @@
   during INIT_MUTEK_PRINTK
   function rtt_printk_init
 %init end
+
+%config CONFIG_DRIVER_CONSOLE_PRINTK
+  desc Use console device as printk output printk.
+  desc Note: there will be no printk output until console is initialized.
+  parent CONFIG_DRIVER
+  provide CONFIG_MUTEK_PRINTK_HANDLER
+%config end
+
+%config CONFIG_DRIVER_CONSOLE_PRINTK_BUFFER_SIZE
+  desc To be asynchronous, console-backed printk needs to do requests
+  desc to the character device in an asynchronous way, therefore
+  desc it needs to use a ringbuffer in RAM.
+  desc If ring buffer overflows, printk messages are lost.
+  parent CONFIG_DRIVER_CONSOLE_PRINTK
+  flags value
+  default 512
+%config end
+
+%init INIT_DRIVER_CONSOLE_PRINTK
+  parent CONFIG_DRIVER_CONSOLE_PRINTK
+  during INIT_MUTEK_PRINTK
+  function console_printk_init
+%init end
