mips: added microaptiv core support

--- a/cpu/mips/mips.config
+++ b/cpu/mips/mips.config
@@ -34,6 +34,20 @@
   provide CONFIG_CPU_HARDWARE_DIVMOD=32
 %config end
 
+%config CONFIG_CPU_MIPS32_MICROAPTIV
+  desc MIPS32 MicroAptiv core
+  flags harddep
+  parent CONFIG_CPU_MIPS
+  provide CONFIG_CPU_ENDIAN_LITTLE
+  provide CONFIG_CPU_EXCEPTION_RELOCATABLE
+  provide CONFIG_CPU_MIPS_VERSION=323
+  provide CONFIG_CPU_NAME=mips32el
+  provide CONFIG_CPU_CACHE
+  provide CONFIG_CPU_WAIT_IRQ
+  provide CONFIG_CPU_HARDWARE_MUL=64
+  provide CONFIG_CPU_HARDWARE_DIVMOD=32
+%config end
+
 %config CONFIG_CPU_MIPS_ABI_O32
   desc Mips processor abi is Old 32
   parent CONFIG_CPU_MIPS
@@ -74,6 +88,7 @@
 
   when CONFIG_CPU_MIPS32EL_SOCLIB
   when CONFIG_CPU_MIPS32EB_SOCLIB
+  when CONFIG_CPU_MIPS32_MICROAPTIV
 
   single CONFIG_CPU_MIPS_ABI_O32 CONFIG_CPU_MIPS_ABI_O64 CONFIG_CPU_MIPS_ABI_N32 CONFIG_CPU_MIPS_ABI_EABI
   require CONFIG_CPU_MIPS_VERSION
