soclib: added missing printk dep

--- a/arch/soclib/soclib.config
+++ b/arch/soclib/soclib.config
@@ -29,6 +29,7 @@
   provide CONFIG_MUTEK_PRINTK_HANDLER
   parent CONFIG_ARCH_SOCLIB
   require CONFIG_MUTEK_PRINTK_ADDR
+  depend CONFIG_MUTEK_PRINTK
 %config end
 
 %init INIT_SOCLIB_PRINTK
