arch: added dummy power.c files for tests

--- a/arch/pic32/Makefile
+++ b/arch/pic32/Makefile
@@ -1,4 +1,4 @@
-objs += arch_init.o pic32fuses.o
+objs += arch_init.o pic32fuses.o power.o
 
 objs-$(CONFIG_PIC32_BOARD_MZEC_STK) += boards/pic32mzecstk.o
 
