--- a/arch/gaisler/Makefile
+++ b/arch/gaisler/Makefile
@@ -1,4 +1,4 @@
-objs = arch_init.o device_ids.o
+objs = arch_init.o device_ids.o power.o
 objs-$(CONFIG_GAISLER_PRINTK) += early_console.o
 
 ifeq ($(LINKING),1)
