hexo: Rework unaligned access support
Let CPU code override non-aligned accesses. Implement missing bits in
generic code, using available CPU primitives.  Fallback to byte-based
accesses.

--- a/cpu/avr32/avr32.config
+++ b/cpu/avr32/avr32.config
@@ -49,6 +49,7 @@
   exclude CONFIG_HEXO_CONTEXT_NESTED
   provide CONFIG_CPU_HARDWARE_MUL=64
   provide CONFIG_CPU_HARDWARE_DIVMOD=32
+  provide CONFIG_CPU_NONALIGNED_ACCESS=1
 %config end
 
 %config CONFIG_CPU_AVR32_TIMER_CYCLECOUNTER
