--- a/cpu/cpu.config
+++ b/cpu/cpu.config
@@ -114,8 +114,13 @@
 
 %config CONFIG_CPU_NONALIGNED_ACCESS
   parent CONFIG_CPU
-  desc Non-aligned memory access are supported by processor without special handling
-  flags meta
+  desc Bitfield of access widths (in bytes) CPU supports natively.
+  desc This should be defined only for access sizes that are
+  desc supported for both reading and writing, whatever the instruction
+  desc the compiler generates.  Some CPUs may support unaliged accesses
+  desc for some instructions only.  They should not provide this flag
+  desc and should provide an assembly routine instead.
+  flags value meta minval
 %config end
 
 %config CONFIG_CPU_HARDWARE_MUL
@@ -149,6 +154,7 @@
   flags	mandatory internal root
   require CONFIG_CPU_NAME
   require CONFIG_CPU_ARCHNAME
+  require CONFIG_CPU_NONALIGNED_ACCESS
   depend CONFIG_CPU_META
   single CONFIG_CPU_ENDIAN_BIG CONFIG_CPU_ENDIAN_LITTLE
 %config end
