--- a/cpu/nios2/nios.config
+++ b/cpu/nios2/nios.config
@@ -43,6 +43,7 @@
   provide CONFIG_CPU_EXCEPTION_SIZE=0x200
   provide CONFIG_CPU_RESET_SIZE=12
   provide CONFIG_CPU_RESET_SEPARATE
+  provide CONFIG_CPU_NONALIGNED_ACCESS=1
 %config end
 
 %config CONFIG_CPU_NIOS2_MUL
