--- a/cpu/lm32/lm32.config
+++ b/cpu/lm32/lm32.config
@@ -40,6 +40,7 @@
   provide CONFIG_CPU_EXCEPTION_ADDR=0x00000000
   provide CONFIG_CPU_EXCEPTION_ALIGN=0x0000100
   provide CONFIG_CPU_EXCEPTION_SIZE=0x0000100
+  provide CONFIG_CPU_NONALIGNED_ACCESS=1
   exclude CONFIG_HEXO_CONTEXT_NESTED
 %config end
 
