--- a/cpu/mips/mips.config
+++ b/cpu/mips/mips.config
@@ -101,6 +101,7 @@
   provide CONFIG_CPU_EXCEPTION_SIZE=0x200
   provide CONFIG_CPU_RESET_ADDR=0xbfc00000
   provide CONFIG_CPU_RESET_SIZE=20
+  provide CONFIG_CPU_NONALIGNED_ACCESS=1
 %config end
 
 %config CONFIG_CPU_MIPS_FPU
