--- a/cpu/ppc/ppc.config
+++ b/cpu/ppc/ppc.config
@@ -49,6 +49,7 @@
   provide CONFIG_CPU_EXCEPTION_ALIGN=0x00010000
   provide CONFIG_CPU_RESET_ADDR=0xffffff80
   provide CONFIG_CPU_RESET_SIZE=0x00000080
+  provide CONFIG_CPU_NONALIGNED_ACCESS=1
   exclude CONFIG_HEXO_CONTEXT_NESTED
 %config end
 
