--- a/cpu/sparc/sparc.config
+++ b/cpu/sparc/sparc.config
@@ -87,6 +87,7 @@
   provide CONFIG_CPU_EXCEPTION_ALIGN=0x00001000
   provide CONFIG_CPU_RESET_ADDR=0x00000000
   provide CONFIG_CPU_RESET_SIZE=16
+  provide CONFIG_CPU_NONALIGNED_ACCESS=1
   exclude CONFIG_HEXO_CONTEXT_NESTED
 %config end
 
