libdevice: postpone init of most device drivers so that irq/kroutine/scheduler are usable, only allow init of cpu and memory drivers during early startup phase

--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -13,12 +13,12 @@
   after INIT_MEMORY
 %init end
 
-%init INIT_DEVICE_DRIVERS 
+%init INIT_DEVICE_EARLY_DRIVERS
   parent CONFIG_DEVICE
   desc Try to find available drivers and initialize all registered devices
   during INIT_DEVICE
   after INIT_DEVICE_ENUM
-  function libdevice_drivers_init
+  function libdevice_drivers_init0
 %init end
 
 %init INIT_DEVICE_CPU_REGS
@@ -26,6 +26,16 @@
   desc Let processor driver initialize processor registers
   during INIT_CPUS
   function libdevice_cpu_regs_initsmp
+%init end
+
+%init INIT_DEVICE_OTHER_DRIVERS
+  parent CONFIG_DEVICE
+  desc Try to find available drivers and initialize all registered devices
+  during INIT_SMP
+  after INIT_CPUS
+  after INIT_HEXO_MAIN_CONTEXT
+  after INIT_MUTEK_SCHEDULER_INIT
+  function libdevice_drivers_init1
 %init end
 
 # IRQ support
