--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -75,6 +75,7 @@
   during INIT_SMP
   after INIT_CPUS
   after INIT_MUTEK_SCHEDULER_INIT
+  after INIT_DEVICE_OTHER_DRIVERS
 %init end
 
 %config CONFIG_APP_START
@@ -138,7 +139,7 @@
   parent CONFIG_MUTEK_CONSOLE
   desc Initialize the console_dev device accessor.
   during INIT_SMP
-  after INIT_MUTEK_SCHEDULER_INIT
+  after INIT_DEVICE_OTHER_DRIVERS
   before INIT_LIBRARIES
   function mutek_console_initsmp mutek_console_cleanupsmp
 %init end
@@ -388,7 +389,7 @@
   desc Init memory regions in arch/ code
   during INIT_BOOTSTRAP
   after INIT_DEVICE_ENUM
-  before INIT_DEVICE_DRIVERS
+  before INIT_DEVICE_EARLY_DRIVERS
 %init end
 
 %config CONFIG_MUTEK_MEMALLOC_SIMPLE
