libtermui: added missing dep on libc for vsnprintf

--- a/libtermui/termui.config
+++ b/libtermui/termui.config
@@ -3,6 +3,7 @@
   desc Enable libtermui
   module libtermui Terminal driver library
   provide CONFIG_LICENSE_USE_GPL
+  depend CONFIG_LIBC_PRINTF
   flags auto
 %config end
 
