--- a/drivers/valio/valio.config
+++ b/drivers/valio/valio.config
@@ -30,6 +30,7 @@
 %config CONFIG_DRIVER_PUSH_BUTTON
   parent CONFIG_DRIVER
   desc Support for push button
+  depend CONFIG_DEVICE_IRQ
   depend CONFIG_DEVICE_VALIO_BUTTON
 %config end
 
