cpu: fixed token flag s/meta/internal

--- a/cpu/cpu.config
+++ b/cpu/cpu.config
@@ -120,7 +120,7 @@
   desc the compiler generates.  Some CPUs may support unaliged accesses
   desc for some instructions only.  They should not provide this flag
   desc and should provide an assembly routine instead.
-  flags value meta minval
+  flags value minval internal
 %config end
 
 %config CONFIG_CPU_HARDWARE_MUL
