libdevice shell: added char command group

--- a/libdevice/Makefile
+++ b/libdevice/Makefile
@@ -16,7 +16,11 @@ objs = driver.o device.o resources.o init.o request.o
 
 objs-$(CONFIG_DEVICE_IRQ) += irq.o
 objs-$(CONFIG_DEVICE_TREE) += enum_root.o
+
+ifeq ($(CONFIG_DEVICE_CHAR), defined)
+objs-$(CONFIG_DEVICE_CHAR) += shell_char.o
 objs-$(CONFIG_DEVICE_CHAR) += device_char.o
+endif
 
 ifeq ($(CONFIG_DEVICE_TIMER), defined)
 objs += device_timer.o
