cc26xx: add printk and uart driver

--- a/arch/cc26xx/cc26xx.config
+++ b/arch/cc26xx/cc26xx.config
@@ -17,3 +17,13 @@
   parent CONFIG_ARCH_CC26XX
   flags value
 %config end
+
+%init INIT_CC26XX_TI
+  parent CONFIG_ARCH_CC26XX
+  during INIT_BOOTSTRAP
+  after INIT_MEMORY_SECTIONS
+  before INIT_MUTEK_PRINTK
+  before INIT_DEVICE
+  function cc26xx_ti_init
+%config end
+
