call context_bootstrap and do not reclaim startup stack when CONFIG_DEVICE_CPU is not defined

--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -376,6 +376,7 @@
   parent CONFIG_MUTEK_DEFAULT_MEMALLOC_INIT
   during INIT_SMP
   before INIT_CPUS
+  condition CONFIG_DEVICE_CPU
   function mutek_startup_stack_reclaim
 %init end
 
