emu: added missing arch deps

--- a/arch/emu/emu.config
+++ b/arch/emu/emu.config
@@ -4,6 +4,8 @@
   provide CONFIG_ARCH_META
   module arch Hexo
   provide CONFIG_ARCH_NAME=emu
+  depend CONFIG_DEVICE_TREE
+  depend CONFIG_LOAD_CUSTOM
   require CONFIG_ARCH_EMU_MEMORY
   require CONFIG_ARCH_EMU_PAGESIZE
   single CONFIG_ARCH_EMU_LINUX CONFIG_ARCH_EMU_DARWIN
