emu cpus: added missing dep on CONFIG_DEVICE_CPU

--- a/cpu/x86_64-emu/emu.config
+++ b/cpu/x86_64-emu/emu.config
@@ -4,6 +4,7 @@
   flags harddep
   module cpu Hexo
   depend CONFIG_ARCH_EMU
+  depend CONFIG_DEVICE_CPU
   provide CONFIG_CPU_CACHE
   provide CONFIG_CPU_NAME=x86_64_emu
   provide CONFIG_CPU_ARCHNAME=x86_64_emu
