--- a/cpu/x86-emu/emu.config
+++ b/cpu/x86-emu/emu.config
@@ -4,6 +4,7 @@
   flags harddep
   module cpu Hexo
   depend CONFIG_ARCH_EMU
+  depend CONFIG_DEVICE_CPU
   provide CONFIG_CPU_WAIT_IRQ
   provide CONFIG_CPU_CACHE
   provide CONFIG_CPU_NAME=x86_emu
