arch/nrf5x: Add support for Seeed Studio Tiny BLE board

--- a/arch/nrf5x/board/board.config
+++ b/arch/nrf5x/board/board.config
@@ -37,3 +37,8 @@
   desc Support for nRF52832 Preview Development Kit
   parent CONFIG_ARCH_NRF52
 %config end
+
+%config CONFIG_NRF5X_TINYBLE
+  desc Support for nRF51822 Tiny-BLE Seeed Studio board
+  parent CONFIG_ARCH_NRF51
+%config end
