drivers: Refactor RTT code, implement a RTT character device

--- a/drivers/char/Makefile
+++ b/drivers/char/Makefile
@@ -1,4 +1,5 @@
 subdirs-$(CONFIG_DRIVER_CHAR_RANDOM) += random
+subdirs-$(CONFIG_DRIVER_CHAR_RTT) += rtt
 subdirs-$(CONFIG_DRIVER_CHAR_ZERO) += zero
 subdirs-$(CONFIG_DRIVER_CHAR_NULL) += null
 subdirs-$(CONFIG_DRIVER_CHAR_CADENCE_UART) += cadence_uart
