--- a/drivers/printk/Makefile
+++ b/drivers/printk/Makefile
@@ -1,3 +1,2 @@
-objs-$(CONFIG_DRIVER_SEGGER_RTT) += segger-rtt.o
-objs-$(CONFIG_DRIVER_SEGGER_RTT_PRINTK) += segger-rtt-printk.o
+objs-$(CONFIG_DRIVER_RTT_PRINTK) += rtt_printk.o
 objs-$(CONFIG_DRIVER_CONSOLE_PRINTK) += console.o
