--- a/drivers/printk/printk.config
+++ b/drivers/printk/printk.config
@@ -1,25 +1,27 @@
-%config CONFIG_DRIVER_SEGGER_RTT
-  desc Segger RTT driver
-  parent CONFIG_DRIVER
-  flags auto
-%config end
-
-%config CONFIG_DRIVER_SEGGER_RTT_PRINTK
-  desc Use segger RTT printk
-  parent CONFIG_DRIVER_SEGGER_RTT
+%config CONFIG_DRIVER_RTT_PRINTK
+  desc Use RTT printk
+  parent CONFIG_DRIVER_RTT
   depend CONFIG_MUTEK_PRINTK
   provide CONFIG_MUTEK_PRINTK_HANDLER
 %config end
 
+%config CONFIG_DRIVER_RTT_PRINTK_OUT_COUNT
+  desc RTT printk output channel count
+  parent CONFIG_DRIVER_RTT_PRINTK
+  flags value
+  provide CONFIG_DRIVER_RTT_TX_CHANNEL
+  default 1
+%config end
+
 %config CONFIG_RTT_PRINTK_RINGBUFFER_SIZE
-  desc Segger RTT printk buffer size
-  parent CONFIG_DRIVER_SEGGER_RTT_PRINTK
+  desc RTT printk buffer size
+  parent CONFIG_DRIVER_RTT_PRINTK
   flags value
   default 512
 %config end
 
-%init INIT_DRIVER_SEGGER_RTT_PRINTK
-  parent CONFIG_DRIVER_SEGGER_RTT_PRINTK
+%init INIT_DRIVER_RTT_PRINTK
+  parent CONFIG_DRIVER_RTT_PRINTK
   during INIT_MUTEK_PRINTK
   function rtt_printk_init
 %init end
