--- a/drivers/char/Makefile
+++ b/drivers/char/Makefile
@@ -3,3 +3,4 @@ subdirs-$(CONFIG_DRIVER_CHAR_RTT) += rtt
 subdirs-$(CONFIG_DRIVER_CHAR_ZERO) += zero
 subdirs-$(CONFIG_DRIVER_CHAR_NULL) += null
 subdirs-$(CONFIG_DRIVER_CHAR_CADENCE_UART) += cadence_uart
+subdirs-$(CONFIG_DRIVER_CHAR_MUX) += char_mux
