--- a/libtermui/termui.config
+++ b/libtermui/termui.config
@@ -85,3 +85,8 @@
   flags value
 %config end
 
+%config CONFIG_LIBTERMUI_GETLINE_PASTEBUF
+  desc Enable getline paste buffer
+  parent CONFIG_LIBTERMUI_CONSOLE
+  default defined
+%config end
