cc26xx: update build and config files

--- a/arch/cc26xx/drivers/uart/uart.config
+++ b/arch/cc26xx/drivers/uart/uart.config
@@ -8,6 +8,7 @@
   desc Enable CC26XX UART char driver
   parent CONFIG_DRIVER_CC26XX_UART
   depend CONFIG_DEVICE_CHAR
+  depend CONFIG_DEVICE_IOMUX
   suggest CONFIG_DEVICE_IRQ
   default defined
 %config end
