--- a/arch/nrf5x/nrf5x.config
+++ b/arch/nrf5x/nrf5x.config
@@ -28,3 +28,8 @@
   during INIT_BOOTSTRAP
   function nrf52_init
 %init end
+
+%config CONFIG_NRF5X_RADIO_DCDC
+  desc Enable nRF5X Radio DCDC
+  parent CONFIG_ARCH_NRF5X
+%config end
