arch/nrf5x: Add BLE direct driver

--- a/arch/nrf5x/drivers/Makefile
+++ b/arch/nrf5x/drivers/Makefile
@@ -13,3 +13,9 @@ objs-$(CONFIG_DRIVER_NRF5X_BLE_RADIO) += ble_radio.o ble_radio_handler.o
 objs-$(CONFIG_DRIVER_NRF5X_RADIO) += radio.o
 objs-$(CONFIG_DRIVER_NRF5X_AES) += aes.o
 objs-$(CONFIG_DRIVER_NRF5X_RNG) += rng.o
+
+ifeq ($(CONFIG_DRIVER_NRF5X_BLE), defined)
+objs += ble.o ble_primitives.o
+objs-$(CONFIG_BLE_PERIPHERAL) += ble_advertiser.o ble_slave.o
+objs-$(CONFIG_BLE_CENTRAL) += ble_master.o
+endif
