arch/nrf5x: Add BLE network driver

--- a/arch/nrf5x/drivers/Makefile
+++ b/arch/nrf5x/drivers/Makefile
@@ -11,3 +11,9 @@ objs-$(CONFIG_DRIVER_NRF5X_RAM) += ram.o
 objs-$(CONFIG_DRIVER_NRF5X_TIMER) += timer.o
 objs-$(CONFIG_DRIVER_NRF5X_AES) += aes.o
 objs-$(CONFIG_DRIVER_NRF5X_RNG) += rng.o
+
+ifeq ($(CONFIG_DRIVER_NRF5X_BLE), defined)
+objs += ble.o ble_primitives.o
+objs-$(CONFIG_BLE_PERIPHERAL) += ble_advertiser.o ble_slave.o
+objs-$(CONFIG_BLE_CENTRAL) += ble_scanner.o ble_master.o
+endif
