--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -283,3 +283,34 @@
   parent CONFIG_ARCH_NRF5X
   depend CONFIG_DEVICE_CRYPTO
 %config end
+
+# BLE network
+
+%config CONFIG_DRIVER_NRF5X_BLE
+  desc Enable BLE network device
+  parent CONFIG_ARCH_NRF5X
+  depend CONFIG_BLE
+  depend CONFIG_DEVICE_NET
+  depend CONFIG_DEVICE_CRYPTO
+%config end
+
+%config CONFIG_DRIVER_NRF5X_BLE_PPI_COUNT
+  desc Count of BLE device PPI channels
+  parent CONFIG_DRIVER_NRF5X_BLE
+  flags value
+  provide CONFIG_DRIVER_NRF5X_PPI_ENUM
+  default 6
+%config end
+
+%config CONFIG_DRIVER_NRF5X_BLE_PPI_GROUP_COUNT
+  desc Count of BLE device PPI groups
+  parent CONFIG_ARCH_NRF5X
+  flags value
+  provide CONFIG_DRIVER_NRF5X_PPI_GROUP_ENUM
+  default 1
+%config end
+
+%config CONFIG_DRIVER_NRF5X_BLE_DEBUG
+  desc Enable nRF5x BLE Debug code
+  parent CONFIG_DRIVER_NRF5X_BLE
+%config end
