arch/nrf5x: Add BLE radio driver

--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -223,3 +223,26 @@
   flags value
   default 1000000
 %config end
+
+# Radio
+
+%config CONFIG_DRIVER_NRF5X_BLE_RADIO
+  desc Enable nRF5x BLE driver
+  parent CONFIG_ARCH_NRF5X
+  depend CONFIG_DEVICE_BLE_RADIO
+  depend CONFIG_BLE
+  depend CONFIG_DEVICE_IRQ
+%config end
+
+%config CONFIG_DRIVER_NRF5X_BLE_RADIO_PPI_COUNT
+  desc Count of nRF5x Radio PPI channels
+  parent CONFIG_DRIVER_NRF5X_BLE_RADIO
+  flags value
+  provide CONFIG_DRIVER_NRF5X_PPI_ENUM
+  default 4
+%config end
+
+%config CONFIG_DRIVER_NRF5X_BLE_RADIO_DCDC
+  desc Enable nRF5X Radio DCDC
+  parent CONFIG_DRIVER_NRF5X_BLE_RADIO
+%config end
