--- a/arch/nrf5x/drivers/Makefile
+++ b/arch/nrf5x/drivers/Makefile
@@ -9,3 +9,4 @@ objs-$(CONFIG_DRIVER_NRF5X_RTC) += rtc.o
 objs += nvmc.o
 objs-$(CONFIG_DRIVER_NRF5X_RAM) += ram.o
 objs-$(CONFIG_DRIVER_NRF5X_TIMER) += timer.o
+objs-$(CONFIG_DRIVER_NRF5X_BLE_RADIO) += ble_radio.o ble_radio_handler.o
