--- a/libble/net/Makefile
+++ b/libble/net/Makefile
@@ -1,6 +1,6 @@
 objs-$(CONFIG_BLE_CRYPTO) += sm.o
-objs += att.o
-objs += gatt.o
+objs += att.o att_encoding.o
+objs += gatt.o gatts.o
 objs += gap.o
 objs += l2cap.o
 objs += signalling.o
