libdevice: added CONFIG_DEVICE_DRIVER_REGISTRY

--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -144,6 +144,12 @@
   default 16
 %config end
 
+%config CONFIG_DEVICE_DRIVER_REGISTRY
+  parent CONFIG_DEVICE
+  desc Keep a table of available device drivers
+  default defined
+%config end
+
 %config CONFIG_DEVICE_DRIVER_DESC
   desc Include description field in driver
   parent CONFIG_DEVICE
@@ -173,6 +179,7 @@
 %config CONFIG_DEVICE_ENUM
   parent CONFIG_DEVICE
   depend CONFIG_DEVICE_TREE
+  depend CONFIG_DEVICE_DRIVER_REGISTRY
   flags auto
   desc Enable enumerator device support
 %config end
