libdevice: added CONFIG_DEVICE_RESOURCE_ALLOC

--- a/arch/emu/emu.config
+++ b/arch/emu/emu.config
@@ -5,6 +5,7 @@
   module arch Hexo
   provide CONFIG_ARCH_NAME=emu
   depend CONFIG_DEVICE_TREE
+  depend CONFIG_DEVICE_RESOURCE_ALLOC
   depend CONFIG_LOAD_CUSTOM
   require CONFIG_ARCH_EMU_MEMORY
   require CONFIG_ARCH_EMU_PAGESIZE
