--- a/arch/gaisler/drivers/ahbctrl/ahbctrl.config
+++ b/arch/gaisler/drivers/ahbctrl/ahbctrl.config
@@ -3,6 +3,7 @@
   desc Provide support for Gaisler AMBA AHB controller with pnp support
   depend CONFIG_DEVICE_ENUM
   depend CONFIG_DEVICE_TREE
+  depend CONFIG_DEVICE_RESOURCE_ALLOC
   parent CONFIG_ARCH_GAISLER
 %config end
 
