--- a/cpu/arm32/drivers/a9mpcore/a9mpcore.config
+++ b/cpu/arm32/drivers/a9mpcore/a9mpcore.config
@@ -3,6 +3,7 @@
   desc Provide support for ARM Cortex-A9 MPCore
   parent CONFIG_CPU_ARM32
   depend CONFIG_DEVICE_ENUM
+  depend CONFIG_DEVICE_RESOURCE_ALLOC
   depend CONFIG_CPU_ARM32_CORTEXA9
 %config end
 
