--- a/drivers/enum/fdt/fdt.config
+++ b/drivers/enum/fdt/fdt.config
@@ -5,6 +5,7 @@
   depend CONFIG_DEVICE_ENUM
   depend CONFIG_LIBFDT
   depend CONFIG_DEVICE_TREE
+  depend CONFIG_DEVICE_RESOURCE_ALLOC
   parent CONFIG_DRIVER
 %config end
 
