--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -162,6 +162,12 @@
   default defined
 %config end
 
+%config CONFIG_DEVICE_RESOURCE_ALLOC
+  desc Enable dynamic extension of device resources list
+  parent CONFIG_DEVICE
+  when CONFIG_DEVICE_TREE
+%config end
+
 # Built-in classes
 
 %config CONFIG_DEVICE_BLOCK
