libble: Add CCM tests and benches

--- a/libble/tests/config
+++ b/libble/tests/config
@@ -25,6 +25,7 @@ CONFIG_BLE_CRYPTO
     CONFIG_DRIVER_NRF5X_RTC
     CONFIG_DRIVER_NRF5X_CLOCK
     CONFIG_DRIVER_NRF5X_PRINTK
+    CONFIG_DRIVER_NRF5X_TIMER
   %end
 
   %subsection ble-efm32
