--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -88,6 +88,7 @@
   depend CONFIG_DEVICE_PWM
   depend CONFIG_DEVICE_IRQ
   depend CONFIG_DEVICE_IOMUX
+  depend CONFIG_DEVICE_DELAYED_REQUEST
 %config end
 
 %config CONFIG_DRIVER_NRF5X_GPIO_PWM_CHANNEL_COUNT
