--- a/libble/net/Makefile
+++ b/libble/net/Makefile
@@ -2,5 +2,5 @@ objs-$(CONFIG_BLE_CRYPTO) += sm.o
 objs += att.o att_encoding.o
 objs += gatt.o gatts.o
 objs += gap.o
-objs += l2cap.o
+objs += l2cap.o link.o llcp.o
 objs += signalling.o
