libble: Update for task header changes

--- a/libble/tests/config
+++ b/libble/tests/config
@@ -22,6 +22,7 @@ CONFIG_BLE_CRYPTO
     CONFIG_DRIVER_NRF5X_AES_CMAC
     CONFIG_DRIVER_NRF5X_AES_CCM
     CONFIG_DRIVER_NRF5X_RNG
+    CONFIG_DRIVER_NRF5X_PERSIST
     CONFIG_DRIVER_NRF5X_RTC
     CONFIG_DRIVER_NRF5X_CLOCK
     CONFIG_DRIVER_NRF5X_PRINTK
