libble: Rename gatt* to gattdb*

--- a/libble/Makefile
+++ b/libble/Makefile
@@ -1,6 +1,6 @@
 objs += radio.o uuid.o
 subdirs += protocol net stack util
-subdirs-$(CONFIG_BLE_GATT) += gatt
+subdirs-$(CONFIG_BLE_GATTDB) += gattdb
 objs-$(CONFIG_BLE_CRYPTO) += crypto.o security_db.o
 objs += peer.o
 subdirs-$(CONFIG_BLE_SHELL) += shell
