--- a/libble/ble.config
+++ b/libble/ble.config
@@ -44,21 +44,21 @@
   parent CONFIG_BLE
 %config end
 
-%config CONFIG_BLE_GATT
-  desc Support GATT db
+%config CONFIG_BLE_GATTDB
+  desc Support GATTDB db
   parent CONFIG_BLE
   default defined
 %config end
 
-%config CONFIG_BLE_GATT_DESCRIPTOR
-  desc Support GATT characteristics descriptors beyond built-in ones
-  parent CONFIG_BLE_GATT
+%config CONFIG_BLE_GATTDB_DESCRIPTOR
+  desc Support GATTDB characteristics descriptors beyond built-in ones
+  parent CONFIG_BLE_GATTDB
   default defined
 %config end
 
-%config CONFIG_BLE_GATT_INCLUDE
-  desc Support GATT service includes
-  parent CONFIG_BLE_GATT
+%config CONFIG_BLE_GATTDB_INCLUDE
+  desc Support GATTDB service includes
+  parent CONFIG_BLE_GATTDB
 %config end
 
 %config CONFIG_BLE_CRYPTO
