--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -7,6 +7,13 @@
   default 0
 %config end
 
+%config CONFIG_DRIVER_NRF5X_PPI_GROUP_ENUM
+  desc nRF5x PPI group allocator
+  parent CONFIG_ARCH_NRF5X
+  flags enum
+  default 0
+%config end
+
 # Clock
 
 %config CONFIG_DRIVER_NRF5X_CLOCK
