--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -307,7 +307,15 @@
   parent CONFIG_DRIVER_NRF5X_BLE
   flags value
   provide CONFIG_DRIVER_NRF5X_PPI_ENUM
-  default 4
+  default 6
+%config end
+
+%config CONFIG_DRIVER_NRF5X_BLE_PPI_GROUP_COUNT
+  desc Count of BLE device PPI groups
+  parent CONFIG_ARCH_NRF5X
+  flags value
+  provide CONFIG_DRIVER_NRF5X_PPI_GROUP_ENUM
+  default 1
 %config end
 
 %config CONFIG_DRIVER_NRF5X_BLE_DEBUG
