--- a/arch/nrf5x/board/board.config
+++ b/arch/nrf5x/board/board.config
@@ -38,6 +38,11 @@
   parent CONFIG_ARCH_NRF52
 %config end
 
+%config CONFIG_NRF5X_PCA10040
+  desc Support for nRF52832 Preview Development Kit v. B
+  parent CONFIG_ARCH_NRF52
+%config end
+
 %config CONFIG_NRF5X_TINYBLE
   desc Support for nRF51822 Tiny-BLE Seeed Studio board
   parent CONFIG_ARCH_NRF51
