--- a/arch/cc26xx/drivers/Makefile
+++ b/arch/cc26xx/drivers/Makefile
@@ -1,2 +1,3 @@
 subdirs-$(CONFIG_DRIVER_CC26XX_UART) += uart
 subdirs-$(CONFIG_DRIVER_CC26XX_GPIO) += gpio
+subdirs-$(CONFIG_DRIVER_CC26XX_TIMER) += timer
