drivers/net: Add virtual interfaces

--- a/drivers/net/Makefile
+++ b/drivers/net/Makefile
@@ -1,2 +1,4 @@
 subdirs-$(CONFIG_DRIVER_BLE_RADIO) += ble_radio
+subdirs-$(CONFIG_DRIVER_LOOPBACK) += loopback
+subdirs-$(CONFIG_DRIVER_IFPAIR) += ifpair
 
