arch/nrf5x: Add SPIM driver (nRF52 SPI Master with DMA)

--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -179,6 +179,16 @@
   depend CONFIG_DEVICE_IRQ
 %config end
 
+# SPIM
+
+%config CONFIG_DRIVER_NRF52_SPIM
+  desc Enable nRF52 SPIM driver (SPI Master with DMA)
+  parent CONFIG_ARCH_NRF52
+  depend CONFIG_DEVICE_IOMUX
+  depend CONFIG_DEVICE_SPI
+  depend CONFIG_DEVICE_IRQ
+%config end
+
 # UART
 
 %config CONFIG_DRIVER_NRF5X_UART
