drivers/rtt: Fix init order

--- a/drivers/printk/printk.config
+++ b/drivers/printk/printk.config
@@ -23,6 +23,7 @@
 %init INIT_DRIVER_RTT_PRINTK
   parent CONFIG_DRIVER_RTT_PRINTK
   during INIT_MUTEK_PRINTK
+  after INIT_DRIVER_RTT
   function rtt_printk_init
 %init end
 
