--- a/libble/net/Makefile
+++ b/libble/net/Makefile
@@ -1,6 +1,7 @@
 objs-$(CONFIG_BLE_CRYPTO) += sm.o
 objs += att.o att_encoding.o
-objs += gatt.o gatts.o
+objs += gatt.o
 objs += gap.o
 objs += l2cap.o link.o llcp.o
 objs += signalling.o
+objs += scan_filter.o
