mutek: renamed CONFIG_MUTEK_SCHEDULER

--- a/examples/getline/config
+++ b/examples/getline/config
@@ -15,7 +15,7 @@
   CONFIG_PTHREAD
   CONFIG_PTHREAD_MAIN
   CONFIG_MUTEK_CONSOLE
-  CONFIG_MUTEK_SCHEDULER defined
+  CONFIG_MUTEK_CONTEXT_SCHED defined
   CONFIG_HEXO_IRQ
 
   %include scripts/options.build
