--- a/examples/getline_lua/config
+++ b/examples/getline_lua/config
@@ -16,7 +16,7 @@
   CONFIG_PTHREAD_STACK_SIZE 16384
 
   CONFIG_MUTEK_CONSOLE
-  CONFIG_MUTEK_SCHEDULER
+  CONFIG_MUTEK_CONTEXT_SCHED
   CONFIG_HEXO_IRQ
 
   %include scripts/options.build
