--- a/libgomp/openmp.config
+++ b/libgomp/openmp.config
@@ -26,7 +26,7 @@
 # %config CONFIG_OPENMP_USE_SCHED
 #   desc libgomp use mutek scheduler primitives directly
 #   parent CONFIG_OPENMP
-#   depend CONFIG_MUTEK_SCHEDULER
+#   depend CONFIG_MUTEK_CONTEXT_SCHED
 # %config end
 
 # FIXME use hexo spinlock/atomic ops instead ?
