--- a/libnetwork/network.config
+++ b/libnetwork/network.config
@@ -2,7 +2,7 @@
   desc Enable networking stack
   module libnetwork
   depend CONFIG_DEVICE_TIMER
-  depend CONFIG_MUTEK_SCHEDULER
+  depend CONFIG_MUTEK_CONTEXT_SCHED
   depend CONFIG_MUTEK_SEMAPHORE
   flags auto
 %config end
