--- a/libpthread/pthread.config
+++ b/libpthread/pthread.config
@@ -3,7 +3,7 @@
   desc Enable POSIX thread support
   flags auto
   require CONFIG_PTHREAD_STACK_SIZE
-  depend CONFIG_MUTEK_SCHEDULER
+  depend CONFIG_MUTEK_CONTEXT_SCHED
   module libpthread Pthread library
 %config end
 
