--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -254,16 +254,16 @@
 ######################################################################
 #		Scheduler
 
-%config CONFIG_MUTEK_SCHEDULER
+%config CONFIG_MUTEK_CONTEXT_SCHED
   desc Hexo scheduler feature is enabled
   flags auto
-  single  CONFIG_MUTEK_SCHEDULER_MIGRATION CONFIG_MUTEK_SCHEDULER_STATIC
+  single  CONFIG_MUTEK_CONTEXT_SCHED_MIGRATION CONFIG_MUTEK_CONTEXT_SCHED_STATIC
   depend CONFIG_DEVICE_CPU
   parent CONFIG_MUTEK
 %config end
 
 %init INIT_MUTEK_SCHEDULER_INIT
-  parent CONFIG_MUTEK_SCHEDULER
+  parent CONFIG_MUTEK_CONTEXT_SCHED
   desc Initialization of scheduler
   during INIT_SMP
   after INIT_HEXO_MAIN_CONTEXT
@@ -271,48 +271,48 @@
 %init end
 
 %init INIT_MUTEK_SCHEDULER_START
-  parent CONFIG_MUTEK_SCHEDULER
+  parent CONFIG_MUTEK_CONTEXT_SCHED
   desc Initialization of scheduler and first interrupts enable
   after INIT_LIBRARIES
   during INIT_SMP
   function mutek_scheduler_start
 %init end
 
-%config CONFIG_MUTEK_SCHEDULER_PREEMPT
+%config CONFIG_MUTEK_CONTEXT_SCHED_PREEMPT
   desc Scheduler preemptive context switch is triggered as a periodic event
-  parent CONFIG_MUTEK_SCHEDULER
+  parent CONFIG_MUTEK_CONTEXT_SCHED
   depend CONFIG_DEVICE_TIMER
   depend CONFIG_HEXO_CONTEXT_PREEMPT
 %config end
 
-%config CONFIG_MUTEK_SCHEDULER_MIGRATION
+%config CONFIG_MUTEK_CONTEXT_SCHED_MIGRATION
   desc Scheduler algorithm use permanent context migration among available processors
-#  when CONFIG_MUTEK_SCHEDULER CONFIG_MUTEK_SCHEDULER_STATIC!
-  when CONFIG_MUTEK_SCHEDULER_STATIC!
-  parent CONFIG_MUTEK_SCHEDULER
+#  when CONFIG_MUTEK_CONTEXT_SCHED CONFIG_MUTEK_CONTEXT_SCHED_STATIC!
+  when CONFIG_MUTEK_CONTEXT_SCHED_STATIC!
+  parent CONFIG_MUTEK_CONTEXT_SCHED
 %config end
 
-%config CONFIG_MUTEK_SCHEDULER_STATIC
+%config CONFIG_MUTEK_CONTEXT_SCHED_STATIC
   desc Scheduler algorithm use per cpu context list
-  parent CONFIG_MUTEK_SCHEDULER
+  parent CONFIG_MUTEK_CONTEXT_SCHED
 %config end
 
-%config CONFIG_MUTEK_SCHEDULER_MIGRATION_AFFINITY
+%config CONFIG_MUTEK_CONTEXT_SCHED_MIGRATION_AFFINITY
   desc Handle scheduler context cpu affininty in migration mode
-  parent CONFIG_MUTEK_SCHEDULER_MIGRATION
+  parent CONFIG_MUTEK_CONTEXT_SCHED_MIGRATION
   depend CONFIG_ARCH_SMP
 %config end
 
-%config CONFIG_MUTEK_SCHEDULER_CANDIDATE_FCN
+%config CONFIG_MUTEK_CONTEXT_SCHED_CANDIDATE_FCN
   desc Enables sched_context_candidate_fcn(), uses an external function to check if a running thread must be selected
-  parent CONFIG_MUTEK_SCHEDULER
+  parent CONFIG_MUTEK_CONTEXT_SCHED
 %config end
 
 %config CONFIG_MUTEK_THREAD
   flags auto
   parent CONFIG_MUTEK
   desc Provide generic thread based on scheduler context
-  depend CONFIG_MUTEK_SCHEDULER
+  depend CONFIG_MUTEK_CONTEXT_SCHED
 %config end
 
 %config CONFIG_MUTEK_RWLOCK
@@ -333,14 +333,14 @@
   desc Support deferred execution of kernel routine on next scheduler context switch
   parent CONFIG_MUTEK
   flags auto
-  depend CONFIG_MUTEK_SCHEDULER
+  depend CONFIG_MUTEK_CONTEXT_SCHED
 %config end
 
 %config CONFIG_MUTEK_KROUTINE_IDLE
   desc Support deferred execution of kernel routine on processor idle state
   parent CONFIG_MUTEK
   flags auto
-  depend CONFIG_MUTEK_SCHEDULER
+  depend CONFIG_MUTEK_CONTEXT_SCHED
 %config end
 
 %config CONFIG_MUTEK_KROUTINE_TRIGGER
