hexo: added interrupt restore enable hook, implemented on mips

--- a/hexo/hexo.config
+++ b/hexo/hexo.config
@@ -81,6 +81,13 @@
   desc Enable context switching on interrupts
 %config end
 
+%config CONFIG_HEXO_CONTEXT_IRQEN
+  parent CONFIG_HEXO
+  flags auto
+  desc Enable hook function on irq restore enable
+  depend CONFIG_HEXO_IRQ
+%config end
+
 %config CONFIG_HEXO_CONTEXT_STATS
   parent CONFIG_HEXO
   desc Enable context stats collection
