mcp23s17: add gpio driver

--- a/drivers/gpio/gpio.config
+++ b/drivers/gpio/gpio.config
@@ -4,3 +4,26 @@
   depend CONFIG_DEVICE_GPIO
   depend CONFIG_DEVICE_I2C
 %config end
+
+%config CONFIG_DRIVER_MCP23S17
+  parent CONFIG_DRIVER
+  desc Enable MCP23S17 SPI i/o Extender
+  depend CONFIG_DEVICE_GPIO
+  depend CONFIG_DEVICE_SPI
+%config end
+
+%config CONFIG_DRIVER_MCP23S17_ICU
+  desc Enable use of the MCP23S17 as an irq controller
+  parent CONFIG_DRIVER_MCP23S17
+  depend CONFIG_DEVICE_IRQ
+  depend CONFIG_DEVICE_ICU
+  require CONFIG_DRIVER_MCP23S17_IRQ_COUNT<=16
+  require CONFIG_DRIVER_MCP23S17_IRQ_COUNT>0
+%config end
+
+%config CONFIG_DRIVER_MCP23S17_IRQ_COUNT
+  parent CONFIG_DRIVER_MCP23S17_ICU
+  desc Specify the number of supported input interrupt lines.
+  default 4
+  flags value
+%config end
