drivers/mpu6505: Update kroutine_init calls

--- a/drivers/valio/valio.config
+++ b/drivers/valio/valio.config
@@ -76,4 +76,5 @@
   depend CONFIG_DEVICE_VALIO_MOTION_SENSOR
   depend CONFIG_DEVICE_TIMER
   depend CONFIG_DEVICE_I2C
+  depend CONFIG_MUTEK_KROUTINE_SCHED
 %config end
