libc: added CONFIG_LIBC_ASSERT_SIMPLE

--- a/libc/libc.config
+++ b/libc/libc.config
@@ -16,6 +16,12 @@
   parent CONFIG_LIBC
 %config end
 
+%config CONFIG_LIBC_ASSERT_SIMPLE
+  desc Only retains execution pointer of the failing assertion
+  parent CONFIG_LIBC_ASSERT
+  suggest_when CONFIG_COMPILE_OPTIMIZE=s
+%config end
+
 %config CONFIG_LIBC_SEMAPHORE
   desc libc semaphore feature enabled
   flags auto
