mutek shell: improved the mutek_shell_start function and updated the shell example

--- a/examples/shell/config
+++ b/examples/shell/config
@@ -8,12 +8,10 @@
   CONFIG_LICENSE_APP_LGPL
 
   # Libs
-  CONFIG_PTHREAD
-  CONFIG_PTHREAD_MAIN
-  CONFIG_PTHREAD_STACK_SIZE 4096
+  CONFIG_APP_START
 
-  CONFIG_MUTEK_CONSOLE
   CONFIG_MUTEK_SHELL
+  CONFIG_MUTEK_THREAD
 
   %include scripts/options.build
   %include arch/arch.build
