drivers: added a pipe virtual char device

--- a/drivers/char/Makefile
+++ b/drivers/char/Makefile
@@ -4,3 +4,4 @@ subdirs-$(CONFIG_DRIVER_CHAR_ZERO) += zero
 subdirs-$(CONFIG_DRIVER_CHAR_NULL) += null
 subdirs-$(CONFIG_DRIVER_CHAR_CADENCE_UART) += cadence_uart
 subdirs-$(CONFIG_DRIVER_CHAR_MUX) += char_mux
+subdirs-$(CONFIG_DRIVER_CHAR_PIPE) += pipe
