char pipe: fixed cancel, fifo enabled by default

--- a/drivers/char/pipe/pipe.config
+++ b/drivers/char/pipe/pipe.config
@@ -8,4 +8,5 @@
 %config CONFIG_DRIVER_CHAR_PIPE_FIFO
   desc Enable char pipe fifo
   parent CONFIG_DRIVER_CHAR_PIPE
+  default defined
 %config end
