char mux: use KROUTINE_DEFERRED instead of KROUTINE_TRIGGER

--- a/drivers/char/Makefile
+++ b/drivers/char/Makefile
@@ -3,5 +3,5 @@ subdirs-$(CONFIG_DRIVER_CHAR_RTT) += rtt
 subdirs-$(CONFIG_DRIVER_CHAR_ZERO) += zero
 subdirs-$(CONFIG_DRIVER_CHAR_NULL) += null
 subdirs-$(CONFIG_DRIVER_CHAR_CADENCE_UART) += cadence_uart
-subdirs-$(CONFIG_DRIVER_CHAR_MUX) += char_mux
+subdirs-$(CONFIG_DRIVER_CHAR_MUX) += mux
 subdirs-$(CONFIG_DRIVER_CHAR_PIPE) += pipe
