cpu/arm32m: Add ITM/ETM/DWT support
In ARM's instrumentation design, this should be done directly by the
probe (this should not even work from the CPU itself).  Nevertheless,
keep this for reference.

--- a/cpu/arm32m/arm32m.config
+++ b/cpu/arm32m/arm32m.config
@@ -178,3 +178,116 @@
   default 32
 %config end
 
+
+# Trace global enable
+
+%config CONFIG_CPU_ARM32M_CORESIGHT
+  desc Enables CoreSight support
+  parent CONFIG_CPU_ARM32M
+%config end
+
+%init INIT_CPU_ARM32M_CORESIGHT
+  parent CONFIG_CPU_ARM32M_CORESIGHT
+  during INIT_BOOTSTRAP
+  function arm32m_coresight_init
+%init end
+
+%config CONFIG_CPU_ARM32M_TRACE
+  desc Enables the TRACE output
+  parent CONFIG_CPU_ARM32M_CORESIGHT
+%config end
+
+# TPIU config
+
+%config CONFIG_CPU_ARM32M_TRACE_PARALLEL
+  desc TRACEDATA output width, 0 means SWO in NRZ mode
+  parent CONFIG_CPU_ARM32M_TRACE
+  flags value
+  default 0
+%config end
+
+%config CONFIG_CPU_ARM32M_TRACE_CLKIN_RATE
+  desc Trace macrocell input clock frequency from SoC (Hz)
+  parent CONFIG_CPU_ARM32M_TRACE
+  flags value
+%config end
+
+%config CONFIG_CPU_ARM32M_TRACE_RATE
+  desc Trace output port clock rate
+  parent CONFIG_CPU_ARM32M
+  flags value
+  default 11
+%config end
+
+%config CONFIG_CPU_ARM32M_TRACE_FORMATTING
+  desc Enable TPIU formatting
+  parent CONFIG_CPU_ARM32M_TRACE
+%config end
+
+# ETM config
+
+%config CONFIG_CPU_ARM32M_ETM
+  desc Enables the Embedded Trace Macrocell
+  parent CONFIG_CPU_ARM32M_CORESIGHT
+%config end
+
+%config CONFIG_CPU_ARM32M_ETM_BUSID
+  desc ETM Bus ID in TPIU
+  parent CONFIG_CPU_ARM32M_TRACE_FORMATTING
+  flags value
+  default 2
+%config end
+
+# DWT config
+
+%config CONFIG_CPU_ARM32M_DWT
+  desc Enables the DWT
+  parent CONFIG_CPU_ARM32M_CORESIGHT
+%config end
+
+%config CONFIG_CPU_ARM32M_DWT_CYCLE_COUNT
+  desc Enables the DWT cycle counter
+  parent CONFIG_CPU_ARM32M_DWT
+%config end
+
+%config CONFIG_CPU_ARM32M_DWT_SYNC
+  desc Make the DWT generate sync events
+  parent CONFIG_CPU_ARM32M_DWT
+%config end
+
+# ITM config
+
+%config CONFIG_CPU_ARM32M_ITM
+  desc Enables the Instruction Trace Macrocell (Software-initated events)
+  parent CONFIG_CPU_ARM32M_CORESIGHT
+%config end
+
+%config CONFIG_CPU_ARM32M_ITM_BUSID
+  desc ITM Bus ID in TPIU
+  parent CONFIG_CPU_ARM32M_TRACE_FORMATTING
+  flags value
+  default 1
+%config end
+
+# ITM-based printk
+
+%config CONFIG_CPU_ARM32M_ITM_PRINTK
+  desc Use Printk output on ITM
+  depend CONFIG_MUTEK_PRINTK
+  provide CONFIG_MUTEK_PRINTK_HANDLER
+  parent CONFIG_CPU_ARM32M_ITM
+%config end
+
+%config CONFIG_CPU_ARM32M_ITM_PRINTK_PORT
+  desc Printk output ITM stimulus port
+  parent CONFIG_CPU_ARM32M_ITM_PRINTK
+  flags value
+  default 0
+%config end
+
+%init INIT_CPU_ARM32M_ITM_PRINTK
+  parent CONFIG_CPU_ARM32M_ITM_PRINTK   
+  during INIT_MUTEK_PRINTK
+  function arm32m_itm_printk_init
+  after INIT_CPU_ARM32M_CORESIGHT
+%init end
