--- a/cpu/arm32m/arm32m.config
+++ b/cpu/arm32m/arm32m.config
@@ -179,3 +179,25 @@
   default 32
 %config end
 
+# ITM-based printk
+
+%config CONFIG_CPU_ARM32M_ITM_PRINTK
+  desc Use Printk output on ITM
+  depend CONFIG_MUTEK_PRINTK
+  provide CONFIG_MUTEK_PRINTK_HANDLER
+  parent CONFIG_CPU_ARM32M
+%config end
+
+%config CONFIG_CPU_ARM32M_ITM_PRINTK_PORT
+  desc Printk output ITM stimulus port
+  parent CONFIG_CPU_ARM32M_ITM_PRINTK
+  flags value
+  default 0
+%config end
+
+%init INIT_CPU_ARM32M_ITM_PRINTK
+  parent CONFIG_CPU_ARM32M_ITM_PRINTK
+  during INIT_MUTEK_PRINTK
+  function arm32m_itm_printk_init
+  after INIT_CPU_ARM32M_CORESIGHT
+%init end
