device: added a start_count field to the device_s structure, updated device_start and device_stop functions accordingly

--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -95,6 +95,21 @@
 
 # Features
 
+%config CONFIG_DEVICE_USE_BITS
+  parent CONFIG_DEVICE
+  desc Specify the number of bits available in device use counter and start counter
+  default 7
+  flags value
+%config end
+
+%config CONFIG_DEVICE_START_LOG2INC
+  parent CONFIG_DEVICE
+  desc Specify the log2 of the device start counter increment.
+  desc This can be used to reserve some lower bits of the counter as driver specific start flags.
+  flags value maxval internal
+  default 0
+%config end
+
 %config CONFIG_DEVICE_TREE
   parent CONFIG_DEVICE
   desc Enable devices to be enumerated dynamically and stored in a tree.
