--- a/arch/cc26xx/drivers/timer/timer.config
+++ b/arch/cc26xx/drivers/timer/timer.config
@@ -3,5 +3,6 @@
   parent CONFIG_ARCH_CC26XX
   depend CONFIG_DEVICE_TIMER
   suggest CONFIG_DEVICE_IRQ
+  provide CONFIG_DEVICE_START_LOG2INC=1
 %config end
 
