--- a/arch/efm32/drivers/rtc/rtc.config
+++ b/arch/efm32/drivers/rtc/rtc.config
@@ -4,5 +4,6 @@
   parent CONFIG_ARCH_EFM32
   depend CONFIG_DEVICE_TIMER
   suggest CONFIG_DEVICE_IRQ
+  provide CONFIG_DEVICE_START_LOG2INC=1
 %config end
 
