--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -579,3 +579,49 @@
   depend CONFIG_MUTEK_BYTECODE_DEBUG
 %config end
 
+
+
+
+%config CONFIG_MUTEK_INSTRUMENTATION
+  parent CONFIG_MUTEK
+  desc Enable kernel instrumentation
+  flags meta
+%config end
+
+%init INIT_INSTRUMENTATION
+  parent CONFIG_MUTEK_INSTRUMENTATION
+  during INIT_MEMORY
+  after INIT_MEMORY_SECTIONS
+  before INIT_MUTEK_MEMALLOC
+%init end
+
+%init INIT_INSTRUMENTATION_SMP
+  parent CONFIG_MUTEK_INSTRUMENTATION
+  during INIT_CPUS
+  before INIT_DEVICE_CPU_REGS
+  before INIT_MUTEK_FAULT_HANDLER
+  condition CONFIG_ARCH_SMP
+%init end
+
+%init INIT_MUTEK_INSTRUMENTATION
+  parent CONFIG_MUTEK_INSTRUMENTATION
+  during INIT_INSTRUMENTATION
+  function instrumentation_globals_init
+%init end
+
+%init INIT_INSTRUMENTATION_CPU_CONTEXT
+  parent CONFIG_MUTEK_INSTRUMENTATION
+  during INIT_BOOTSTRAP
+  after INIT_MEMORY
+  before INIT_MUTEK_SCHEDULER_INIT
+  function instrumentation_cpu_context_init
+%init end
+
+%init INIT_INSTRUMENTATION_CPU_CONTEXT_SMP
+  parent CONFIG_MUTEK_INSTRUMENTATION
+  during INIT_INSTRUMENTATION_SMP
+  before INIT_DEVICE_CPU_REGS
+  before INIT_MUTEK_FAULT_HANDLER
+  function instrumentation_cpu_context_initsmp
+  condition CONFIG_ARCH_SMP
+%init end
