all: Merge instrumentation and memchecker

--- a/arch/soclib/soclib.config
+++ b/arch/soclib/soclib.config
@@ -99,25 +99,8 @@
   parent CONFIG_ARCH_SOCLIB
   depend CONFIG_MUTEK_MEMALLOC_SMART
   suggest CONFIG_COMPILE_NOBITFIELD
+  provide CONFIG_MUTEK_INSTRUMENTATION
 %config end
-
-%init INIT_SOCLIB_MEMCHECK
-  parent CONFIG_SOCLIB_MEMCHECK
-  during INIT_MEMORY_SECTIONS
-  before INIT_ZERO_BSS
-  before INIT_COPY_DATA
-  after INIT_COPY_EXCEPTION_VECTORS
-  function soclib_memcheck_init
-%init end
-
-%init INIT_SOCLIB_MEMCHECK_SMP
-  parent CONFIG_SOCLIB_MEMCHECK
-  during INIT_CPUS
-  before INIT_DEVICE_CPU_REGS
-  before INIT_MUTEK_FAULT_HANDLER
-  function soclib_memcheck_initsmp
-  condition CONFIG_ARCH_SMP
-%init end
 
 %config CONFIG_SOCLIB_MEMCHECK_ADDRESS
   desc Memory check address
