drivers: Update rtt

--- a/drivers/rtt/rtt.config
+++ b/drivers/rtt/rtt.config
@@ -27,6 +27,9 @@
 
 %init INIT_DRIVER_RTT
   parent CONFIG_DRIVER_RTT
-  during INIT_MUTEK_PRINTK
+  during INIT_MEMORY
+  after INIT_MEMORY_SECTIONS
+  before INIT_MUTEK_PRINTK
+  before INIT_INSTRUMENTATION
   function rtt_init
 %init end
