--- a/doc/mkdoc.conf
+++ b/doc/mkdoc.conf
@@ -7,7 +7,7 @@
 @setopt show_macro_content
 @c @setopt hide_internal
 @setopt short_typedefs
-@setopt source_url_template {https://www.mutekh.org/trac/mutekh/browser/hg/@f?rev=@r#L@n}
+@setopt source_url_template {https://www.mutekh.org/hg/mutekh/file/@r/@f#l@n}
 @setopt multiple_symbol_def
 @setopt multiple_macro_def
 @setopt function_overloading {0}
