--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -443,3 +443,18 @@
   flags auto
   desc Enable persistent storage support
 %config end
+
+%config CONFIG_DEVICE_SLEEP
+  parent CONFIG_DEVICE
+  flags auto
+  desc Enable device sleep callback
+  depend CONFIG_MUTEK_KROUTINE_IDLE
+%config end
+
+%init INIT_DEVICE_SLEEP
+  parent CONFIG_DEVICE_SLEEP
+  desc Initialize the device sleeping policies
+  during INIT_DEVICE
+  function device_sleep_init
+%init end
+
